--- a/src/Pages/pages.css
+++ b/src/Pages/pages.css
@@ -56,7 +56,7 @@
     border-bottom: 1px solid black;
     margin: 10px 0;
 }
-h3, p { 
+h3, p, h4 { 
     padding: 0;
     margin: 0;
 }
@@ -73,4 +73,18 @@ h3, p {
 .date{
     font-size: 12px;
     color: gray;
+}
+.comment_holder{
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 20px;
+    margin: 2px 0;
+    background-color: rgb(222, 222, 222);
+    
+}
+.comment_userName{
+    padding-right: 20px;
+    font-size: 16px;
+    font-weight: 700;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
